--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "email-validator": "^2.0.4",
     "expo": "^44.0.4",
+    "expo-camera": "~12.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.2",
     "formik": "^2.2.9",
@@ -29,8 +31,7 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "yup": "^0.32.11",
-    "expo-camera": "~12.1.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
