--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "email-validator": "^2.0.4",
     "expo": "^44.0.4",
     "expo-camera": "~12.1.0",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.2",
     "formik": "^2.2.9",
@@ -26,14 +29,14 @@
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "yup": "^0.32.11",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "expo-image-picker": "~12.0.1"
+    "react-native-pager-view": "5.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
